--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/test-snaps.git"
+    "url": "https://github.com/Mrtenz/test-snaps.git"
   },
   "homepage": "https://metamask.github.io/test-snaps/",
   "scripts": {
